--- a/micro-rlp/test/Makefile
+++ b/micro-rlp/test/Makefile
@@ -1,43 +1,19 @@
 #test makefile
 
+# tell common.mk flags and file locations
 INCDIR:=../../build/include/
+SRCDIR:=./
 CFLAGS?=-O0 -g -Wall -Wno-pointer-sign -DNDEBUG -DURLP_CONFIG_LINUX_EMU 
 LDFLAGS=-L../../build/lib -l:liburlp.a
-CC:=cc -std=gnu11  -I${INCDIR} -I. -I../../build/include
+CC:=cc -std=gnu11  -I${INCDIR} -I.
 
+# create some dirs
 dirs+=./obj
 
+# compiled objects
 obj-y+=./obj/test.o
 
-test:	${dirs} ${obj-y}
-	@echo "LINK $@"
-	@${CC} ${obj-y} ${LDFLAGS} -o test
-
-./obj/%.o: %.c
-	@echo "  CC $@"
-	@${CC} -c ${CFLAGS} ${LDFLAGS} $< -o $@
+# note - common.mk build requires app_*
+app: ${dirs} ${obj-y} app_test
 
 include ../../common.mk
-
-.PHONY: cscope clean print
-cscope:
-	find . \
-		\( -name '*.c' -o -name '*.h' -o -name '*.hpp' -o -name '*.cpp' \) -print > cscope.files
-		cscope -b 
-
-valgrind:
-	valgrind \
-		--track-origins=yes \
-		--tool=memcheck \
-		--leak-check=full \
-		./test
-
-clean:
-	@echo "CLEAN"
-	@rm -rf ./obj/ test
-
-print:
-	@echo \
-		OBJECTS: ${obj-y} \
-		LIB_OBJ: ${relobj-y} \
-		| sed -e 's/\s\+/\n/g' 
