--- a/micro-rlpx/Makefile
+++ b/micro-rlpx/Makefile
@@ -6,6 +6,9 @@ INCDIR:=${PREFIX}/include
 BINDIR:=${PREFIX}/bin
 SRCDIR:=./src
 
+incs+= \
+       -I../micro-board/linux-emu/
+
 CFLAGS?=-O0 -g -Wall -DNDEBUG -DURLP_CONFIG_LINUX_EMU 
 CC:=cc -std=gnu11  -I${INCDIR} -I${SRCDIR} -I./external/klib
 
@@ -16,7 +19,8 @@ dirs+=${LIBDIR}
 dirs+=${BINDIR}
 
 # get objects
-obj-y+=./obj/unet.o
+obj-y+=./obj/urlpx.o
+obj-y+=../micro-board/linux-emu/obj/mtm_net.o
 
 # headers
 hdrs+=${INCDIR}/${BRAND}/urlpx.h
@@ -29,8 +33,8 @@ all: ${LIBDIR}/liburlpx.so ${LIBDIR}/liburlpx.a
 
 include ../common.mk
 
-${LIBDIR}/liburlpx.a: ${hdrs}
-${LIBDIR}/liburlpx.so: ${hdrs}
+#${LIBDIR}/liburlpx.a: ${hdrs}
+#${LIBDIR}/liburlpx.so: ${hdrs}
 
 .PHONY: clean
 
@@ -38,3 +42,7 @@ clean:
 	@echo "CLEAN"
 	@rm -rf ./obj/ ${LIBDIR}/liburlpx.so ${LIBDIR}/liburlpx.a
 	@rm -f ${hdrs} #careful when headers is an empty /
+
+#
+#
+#
