--- a/micro-rlpx/Makefile
+++ b/micro-rlpx/Makefile
@@ -6,20 +6,26 @@ INCDIR:=${PREFIX}/include
 BINDIR:=${PREFIX}/bin
 SRCDIR:=./src
 
-#defines+=-DURLPX_CONFIG_LINUX_EMU
-#incs+=-I.
-#incs+=./src
-#incs+=../micro-board/linux-emu/
-
 # create dirs
 dirs+=./obj
 dirs+=${INCDIR}/mtm
 dirs+=${LIBDIR}
 dirs+=${BINDIR}
 
-# get objects
+#preprocessor
+defines+=-DURLPX_CONFIG_LINUX_EMU
+defines+=-DURLP_CONFIG_LINUX_EMU
+
+#source directories
+incs+=-I../build/include/
+incs+=-I.
+incs+=-I./src
+incs+=-I../micro-board/linux-emu/
+
+# compile objects
 obj-y+=./obj/urlpx.o
-obj-y+=../micro-board/linux-emu/obj/mtm_net.o
+
+relobj-y:=${obj-y:.o=.lo}
 
 # headers
 hdrs+=${INCDIR}/mtm/urlpx.h
@@ -27,8 +33,18 @@ hdrs+=${INCDIR}/mtm/urlpx_config.h
 hdrs+=${INCDIR}/mtm/urlpx_config_linux_emu.h
 
 #targets
-all: ${LIBDIR}/liburlpx.so ${LIBDIR}/liburlpx.a ${hdrs}
+all: \
+	board \
+	${dirs} \
+	${obj-y} \
+	${relobj-y} \
+	${LIBDIR}/liburlpx.so \
+	${LIBDIR}/liburlpx.a \
+	${hdrs} 
 
+board:
+	$(MAKE) -s -C ../micro-board/linux-emu
+	
 include ../common.mk
 
 .PHONY: clean
