--- a/micro-rlpx/Makefile
+++ b/micro-rlpx/Makefile
@@ -12,11 +12,11 @@ dirs+=${INCDIR}/mtm
 dirs+=${LIBDIR}
 dirs+=${BINDIR}
 
-#preprocessor
+# preprocessor
 defines+=-DURLPX_CONFIG_LINUX_EMU
 defines+=-DURLP_CONFIG_LINUX_EMU
 
-#source directories
+# source directories
 incs+=-I../build/include/
 incs+=-I.
 incs+=-I./src
@@ -25,6 +25,10 @@ incs+=-I../micro-board/linux-emu/
 # compile objects
 obj-y+=./obj/urlpx.o
 
+# linker dependencies
+ld-obj+=../micro-board/linux-emu/obj/board_net.o
+ld-relobj+=../micro-board/linux-emu/obj/board_net.lo
+
 relobj-y:=${obj-y:.o=.lo}
 
 # headers
@@ -32,7 +36,7 @@ hdrs+=${INCDIR}/mtm/urlpx.h
 hdrs+=${INCDIR}/mtm/urlpx_config.h
 hdrs+=${INCDIR}/mtm/urlpx_config_linux_emu.h
 
-#targets
+# targets
 all: \
 	board \
 	${dirs} \
@@ -42,7 +46,7 @@ all: \
 	${LIBDIR}/liburlpx.a \
 	${hdrs} 
 
-board:
+board: ${ld-obj} ${ld-relobj}
 	$(MAKE) -s -C ../micro-board/linux-emu
 	
 include ../common.mk
