--- a/liburlp/test/Makefile
+++ b/liburlp/test/Makefile
@@ -1,16 +1,16 @@
 #test makefile
 
 # tell common.mk flags and file locations
-INCDIR:=../../build/include/
+INCDIR:=../../target/include/
 SRCDIR:=./
 
 defines+=-DURLP_CONFIG_LINUX_EMU
 cflags+=-Wno-pointer-sign
 
-incs+=-I../../build/include
+incs+=-I../../target/include
 incs+=-I./
 
-libs+=-L../../build/lib -l:liburlp.a
+libs+=-L../../target/lib -l:liburlp.a
 
 # create some dirs
 dirs+=./obj
@@ -18,7 +18,7 @@ dirs+=./obj
 # compiled objects
 obj-y+=./obj/test.o
 
-# note - common.mk build requires app_*
+# note - common.mk target requires app_*
 app: ${dirs} ${obj-y} app_test
 
 include ../../common.mk
