--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/mbedtls"]
 	path = external/mbedtls
 	url = https://github.com/ARMmbed/mbedtls
+[submodule "external/trezor-crypto"]
+	path = external/trezor-crypto
+	url = https://github.com/trezor/trezor-crypto
