--- a/libucrypto/Makefile
+++ b/libucrypto/Makefile
@@ -8,25 +8,24 @@ SRCDIR:=./
 
 incs+=-I.
 incs+=-I${SRCDIR}
-incs+=-I../../external/trezor-crypto
-incs+=-I../../board/linux-emu
+incs+=-I../external/mbedtls/include
+incs+=-I../board/linux-emu
 
 #create dirs
 dirs+=./obj
 
 #build objects
-obj-y+=../../external/trezor-crypto/sha3.o
-obj-y+=./obj/sha.o
+obj-y+=./obj/dh.o
+obj-y+=./obj/mpi.o
 
 relobj-y:=${obj-y:.o=.lo}
 
 #targets
-all: ${dirs} ${obj-y}
+all: ${dirs} ${obj-y} ${relobj-y}
 
-include ../../common.mk
+include ../common.mk
 
 clean:
 	@echo "CLEAN"
 	@rm -rf ./obj/ 
-	@rm -rf ../../external/trezor-crypto/*.o
 	@rm -f ${hdrs} #careful when headers is an empty /
