--- a/libucrypto/Makefile
+++ b/libucrypto/Makefile
@@ -15,6 +15,7 @@ incs+=-I../external/mbedtls/include
 dirs+=./obj
 
 #build objects
+obj-y+=./obj/aes.o
 obj-y+=./obj/ecc.o
 obj-y+=./obj/mpi.o
 obj-y+=./obj/ecies.o
@@ -47,6 +48,7 @@ ld-obj+=../external/mbedtls/library/sha256.o
 ld-obj+=../external/mbedtls/library/sha512.o
 ld-obj+=../external/mbedtls/library/timing.o
 
+hdrs+=${INCDIR}/mtm/aes.h
 hdrs+=${INCDIR}/mtm/ecc.h
 hdrs+=${INCDIR}/mtm/mpi.h
 hdrs+=${INCDIR}/mtm/ecies.h
