--- a/libucrypto/test/Makefile
+++ b/libucrypto/test/Makefile
@@ -8,6 +8,7 @@ incs+=-I../../target/include/
 incs+=-I../../target/include/mtm
 
 alibs+=-L../../target/lib -l:libucrypto.a
+#alibs+=-L../../target/lib -l:libucrypto-trezor.a
 
 # create some dirs
 dirs+=./obj
