--- a/libucrypto/secp256k1/Makefile
+++ b/libucrypto/secp256k1/Makefile
@@ -12,6 +12,12 @@ dirs+=${INCDIR}/mtm
 dirs+=./obj
 obj-y+=./obj/uecc.o
 
+#hdrs+=${INCDIR}/mtm/uaes.h
+hdrs+=${INCDIR}/mtm/uecc.h
+#hdrs+=${INCDIR}/mtm/umpi.h
+#hdrs+=${INCDIR}/mtm/uecies.h
+#hdrs+=${INCDIR}/mtm/uhmac.h
+
 relobj-y:=${obj-y:.o=.lo}
 ld-relobj-y:=${ld-obj:.o=.lo}
 
