--- a/libucrypto/test/Makefile
+++ b/libucrypto/test/Makefile
@@ -4,10 +4,11 @@ SRCDIR:=./
 
 incs+=-I./
 incs+=-I../
+incs+=-I../../external/secp256k1/include
 incs+=-I../../target/include/
 incs+=-I../../target/include/mtm
 
-alibs+=-L../../target/lib -l:libucrypto.a
+alibs+=-L../../target/lib -l:libucrypto.a -l:libsecp256k1.la
 #alibs+=-L../../target/lib -l:libucrypto-trezor.a
 
 # create some dirs
