--- a/libucrypto/test/Makefile
+++ b/libucrypto/test/Makefile
@@ -5,11 +5,12 @@ SRCDIR:=./
 incs+=-I./
 incs+=-I../
 incs+=-I../../external/secp256k1/include
+incs+=-I../../external/secp256k1/src
 incs+=-I../../target/include/
 incs+=-I../../target/include/mtm
 
-alibs+=-L../../target/lib -l:libucrypto.a -l:libsecp256k1.la
-#alibs+=-L../../target/lib -l:libucrypto-trezor.a
+alibs+=-L../../target/lib -l:libucrypto-secp256k1.a -l:libsecp256k1.a
+#alibs+=-libtest
 
 # create some dirs
 dirs+=./obj
