fixed dependency repo, ecdh worky now

--- a/libucrypto/secp256k1/Makefile
+++ b/libucrypto/secp256k1/Makefile
@@ -6,8 +6,7 @@ SRCDIR:=./
 
 incs+=-I.
 incs+=-I${SRCDIR}
-incs+=-I../../external/secp256k1/include
-incs+=-I../../external/secp256k1/src
+incs+=-I../../target/include
 
 dirs+=${INCDIR}/mtm
 dirs+=./obj
