--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "external/trezor-crypto"]
 	path = external/trezor-crypto
 	url = https://github.com/trezor/trezor-crypto
+[submodule "external/secp256k1"]
+	path = external/secp256k1
+	url = https://github.com/chfast/secp256k1
+	branch = develop
