--- a/libucrypto/Makefile.include
+++ b/libucrypto/Makefile.include
@@ -1,25 +1,25 @@
 ifneq (,$(filter mbedtls-uaes,$(USEMODULE)))
-  USEMODULE_INCLUDES += $(BASE)/libucrypto/mbedtls/aes
+  USEMODULE_SRCS += $(BASE)/libucrypto/mbedtls/aes
 endif
 
 ifneq (,$(filter mbedtls-uecc,$(USEMODULE)))
-  USEMODULE_INCLUDES += $(BASE)/libucrypto/mbedtls/ecc
+  USEMODULE_SRCS += $(BASE)/libucrypto/mbedtls/ecc
 endif
 
 ifneq (,$(filter mbedtls-uhash,$(USEMODULE)))
-  USEMODULE_INCLUDES += $(BASE)/libucrypto/mbedtls/hash
+  USEMODULE_SRCS += $(BASE)/libucrypto/mbedtls/hash
 endif
 
 ifneq (,$(filter secp256k1-uaes,$(USEMODULE)))
-  USEMODULE_INCLUDES += $(BASE)/libucrypto/secp256k1/aes
+  USEMODULE_SRCS += $(BASE)/libucrypto/secp256k1/aes
 endif
 
 ifneq (,$(filter secp256k1-uecc,$(USEMODULE)))
-  USEMODULE_INCLUDES += $(BASE)/libucrypto/secp256k1/ecc
+  USEMODULE_SRCS += $(BASE)/libucrypto/secp256k1/ecc
 endif
 
 ifneq (,$(filter secp256k1-uhash,$(USEMODULE)))
-  USEMODULE_INCLUDES += $(BASE)/libucrypto/secp256k1/hash
+  USEMODULE_SRCS += $(BASE)/libucrypto/secp256k1/hash
 endif
 
 ifneq (,$(filter mbedtls,$(USEMODULE)))
