--- a/Makefile.base
+++ b/Makefile.base
@@ -2,31 +2,5 @@ MKDIR_P:= mkdir -p
 CFLAGS?=-O0 -g -Wall  -DNDEBUG -std=gnu11
 CC:=gcc
 
-# .o , .a outputs
-MODULE_DIRS:=$(addprefix $(TARGET)/,$(USEMODULE))
+OBJS+=$(OBJS-Y)
 
-# collect dirs
-DIRS+=$(MODULE_DIRS)
-
-#collect objects
-OBJS+=$(XOBJ)
-
-$(APPLICATION): \
-	$(DIRS) \
-	$(OBJS)
-
-$(DIRS)/%.o: %.c
-	@echo $<
-	@echo $@
-
-#${XOBJ}: $(SRCS)/*.c
-#	@echo "  CC $@"
-#	${CC} -c $< -o $@ 
-
-#$(XOBJ): $(SRCS)/*.c
-#	@echo "  CC $@"
-#	${CC} -c ${CFLAGS} ${LDFLAGS} $(INCS) $< -o $@ 
-
-#${LIBDIR}/%.a: ${dirs} ${obj-y} ${hdrs} ${ld-obj}
-#	@echo "LINK $@"
-#	@ar rcs $@ ${obj-y} ${ld-obj} 
