--- a/Makefile.include
+++ b/Makefile.include
@@ -1,3 +1,3 @@
 TARGET?=target
-include $(BASE)/libucrypto/Makefile.include
+include $(addsuffix /Makefile.include, $(USEMODULE))
 include $(BASE)/Makefile.base
