--- a/libucrypto/Makefile.include
+++ b/libucrypto/Makefile.include
@@ -1,35 +1,33 @@
-ifneq (,$(filter mbedtls-uaes,$(USEMODULE)))
-  SRCS+=$(BASE)/libucrypto/mbedtls/aes
-  INCS+=-I$(BASE)/libucrypto/mbedtls/aes
-  XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/mbedtls-uaes/, $(notdir $(shell find $(BASE)/libucrypto/mbedtls/aes -name '*.c'))))
+ifneq (,$(filter libucrypto-mbedtls-uaes,$(USEMODULE)))
+  include $(BASE)/libucrypto/mbedtls/uaes
 endif
 
 ifneq (,$(filter mbedtls-uecc,$(USEMODULE)))
-  SRCS+=$(BASE)/libucrypto/mbedtls/ecc
-  INCS+=-I$(BASE)/libucrypto/mbedtls/ecc
-  XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/mbedtls-uecc/, $(notdir $(shell find $(BASE)/libucrypto/mbedtls/ecc -name '*.c'))))
+  #SRCS+=$(BASE)/libucrypto/mbedtls/ecc
+  #INCS+=-I$(BASE)/libucrypto/mbedtls/ecc
+  #XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/mbedtls-uecc/, $(notdir $(shell find $(BASE)/libucrypto/mbedtls/ecc -name '*.c'))))
 endif
 
 ifneq (,$(filter mbedtls-uhash,$(USEMODULE)))
-  SRCS+=$(BASE)/libucrypto/mbedtls/hash
-  INCS+=-I$(BASE)/libucrypto/mbedtls/hash
-  XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/mbedtls-uhash/, $(notdir $(shell find $(BASE)/libucrypto/mbedtls/hash -name '*.c'))))
+  #SRCS+=$(BASE)/libucrypto/mbedtls/hash
+  #INCS+=-I$(BASE)/libucrypto/mbedtls/hash
+  #XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/mbedtls-uhash/, $(notdir $(shell find $(BASE)/libucrypto/mbedtls/hash -name '*.c'))))
 endif
 
 ifneq (,$(filter secp256k1-uaes,$(USEMODULE)))
-  SRCS+=$(BASE)/libucrypto/secp256k1/aes
-  INCS+=-I$(BASE)/libucrypto/secp256k1/aes
-  XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/secp256k1-uaes/,$(notdir $(shell find $(BASE)/libucrypto/secp256k1/aes -name '*.c'))))
+  #SRCS+=$(BASE)/libucrypto/secp256k1/aes
+  #INCS+=-I$(BASE)/libucrypto/secp256k1/aes
+  #XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/secp256k1-uaes/,$(notdir $(shell find $(BASE)/libucrypto/secp256k1/aes -name '*.c'))))
 endif
 
 ifneq (,$(filter secp256k1-uecc,$(USEMODULE)))
-  SRCS+=$(BASE)/libucrypto/secp256k1/ecc
-  INCS+=-I$(BASE)/libucrypto/secp256k1/ecc
-  XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/secp256k1-uecc/, $(notdir $(shell find $(BASE)/libucrypto/secp256k1/ecc -name '*.c'))))
+  #SRCS+=$(BASE)/libucrypto/secp256k1/ecc
+  #INCS+=-I$(BASE)/libucrypto/secp256k1/ecc
+  #XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/secp256k1-uecc/, $(notdir $(shell find $(BASE)/libucrypto/secp256k1/ecc -name '*.c'))))
 endif
 
 ifneq (,$(filter secp256k1-uhash,$(USEMODULE)))
-  SRCS+=$(BASE)/libucrypto/secp256k1/hash
-  INCS+=-I$(BASE)/libucrypto/secp256k1/hash
-  XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/secp256k1-uhash/,$(notdir $(shell find $(BASE)/libucrypto/secp256k1/hash -name '*.c'))))
+  #SRCS+=$(BASE)/libucrypto/secp256k1/hash
+  #INCS+=-I$(BASE)/libucrypto/secp256k1/hash
+  #XOBJ+=$(patsubst %.c,%.o,$(addprefix $(TARGET)/secp256k1-uhash/,$(notdir $(shell find $(BASE)/libucrypto/secp256k1/hash -name '*.c'))))
 endif
