--- a/Makefile.base
+++ b/Makefile.base
@@ -1,6 +1,22 @@
+#Makefile.base
+
 MKDIR_P:= mkdir -p
 CFLAGS?=-O0 -g -Wall  -DNDEBUG -std=gnu11
 CC:=gcc
 
+# build output directories
+DIRS+=$(addprefix $(TARGET)/, $(USEMODULE))
+
+# build objects
 OBJS+=$(OBJS-Y)
 
+$(APPLICATION): \
+	$(DIRS) \
+	$(DIRS)/$(OBJS) 
+
+${DIRS}:
+	${MKDIR_P} ${DIRS}
+
+#$(TARGET)/$(USEMODULE)/%.o $(USEMODULE)/%.c:
+#	echo $< 
+#	echo $@
