--- a/libucrypto/test/Makefile
+++ b/libucrypto/test/Makefile
@@ -5,8 +5,8 @@ BOARD:=linux-emu
 BASE:=../..
 
 USEMODULE+=libucrypto/mbedtls/uaes
-USEMODULE+=libucrypto/secp256k1/uecc
-USEMODULE+=libucrypto/secp256k1/uhash
+#USEMODULE+=libucrypto/secp256k1/uecc
+#USEMODULE+=libucrypto/secp256k1/uhash
 
 include ${BASE}/Makefile.include
 
@@ -14,5 +14,7 @@ print:
 	@echo \
 		DIRS: $(DIRS) \
 		SRCS: $(SRCS) \
+		INCS: $(INCS) \
 		OBJS: $(OBJS) \
+		test: $(test) \
 		| sed -e 's/\s\+/\n/g' 
