--- a/Makefile.common
+++ b/Makefile.common
@@ -1,16 +1,27 @@
 #Makefile.common
 
+MKDIR_P:= mkdir -p
+CFLAGS?=-O0 -g -Wall  -DNDEBUG -std=gnu11
+CC:=gcc
+
 DIRS+=$(TARGET)/$(MODULE)
 OBJS+=$(patsubst %.c,%.o,$(TARGET)/$(MODULE)/$(notdir $(SRCS)))
 INCS:=$(addprefix -I,$(INC))
 LIBS:=$(addprefix $(TARGET)/$(MODULE)/,$(LIB))
 
-test+=$(LIBS)
+#
+# the order of this matters need to make more robust
+#
 
 $(TARGET)/$(MODULE)/%.o: $(SRC)/%.c
-	@echo "xxx  CC $@"
+	@echo "  CC $@"
 	@${CC} -c ${CFLAGS} ${LDFLAGS} $(INCS) $< -o $@ 
 
 $(LIBS): $(DIRS) $(OBJS)
 	@echo "LINK $@"
 	@ar rcs $@ $(OBJS) 
+
+${DIRS}:
+	@echo "MKDR $@"
+	@${MKDIR_P} ${DIRS}
+
