--- a/libucrypto/test/Makefile
+++ b/libucrypto/test/Makefile
@@ -5,7 +5,7 @@ BOARD:=linux-emu
 BASE:=../..
 
 USEMODULE+=libucrypto/mbedtls/uaes
-#USEMODULE+=libucrypto/secp256k1/uecc
+USEMODULE+=libucrypto/secp256k1/uecc
 #USEMODULE+=libucrypto/secp256k1/uhash
 
 include ${BASE}/Makefile.include
