--- a/libucrypto/secp256k1/uecc/Makefile.include
+++ b/libucrypto/secp256k1/uecc/Makefile.include
@@ -1,4 +1,12 @@
 #Makefile.include
-src-y+=$(BASE)/libucrypto/secp256k1/uecc/uecc.c
-obj-y+=$(TARGET)/libucrypto/secp256k1/uecc/uecc.o
-hdr-y+=$(TARGET)/libucrypto/secp256k1/uecc/include/uecc.h
+SRCS:=
+INCS:=
+DIRS:=
+OBJS:=
+MODULE:=libucrypto/secp256k1/uecc
+LIB:=libucrypto-secp256k1-uecc.a
+SRC:=$(BASE)/$(MODULE)
+SRCS+=$(SRC)/uecc.c
+INCS+=$(BASE)/$(MODULE)
+INCS+=$(BASE)/external/secp256k1/include
+include $(BASE)/Makefile.common
