--- a/libucrypto/test/Makefile
+++ b/libucrypto/test/Makefile
@@ -4,7 +4,7 @@ APPLICATION:=libucrypto-test
 BOARD:=linux-emu
 BASE:=../..
 
-USEMODULE+=libucrypto/mbedtls/uaes
+#USEMODULE+=libucrypto/mbedtls/uaes
 USEMODULE+=libucrypto/secp256k1/uecc
 #USEMODULE+=libucrypto/secp256k1/uhash
 
